[tool.poetry]
name = "janet"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pre-commit = "^2.3.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
isort = "^4.3.21"
bandit = "^1.6.2"
mypy = "^0.770"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
line_length = 100
use_parentheses = true
