[tool.poetry]
name = "janet"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pre-commit = "^2.16.0"
ipython = "^7.30.1"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
isort = "^5.10.1"
bandit = "^1.7.1"
mypy = "^0.930"
pytest = "^6.2.5"
pytest-sugar = "^0.9.4"
pytest-cov = "^3.0.0"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
line_length = 100
use_parentheses = true
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
